# numerical-methods

./: README.md  Timing_data.xlsm  circuit.py  cjm_conductor_simulation.py  conductor_simulation.py  conjugate_gradient.py  construct_simple2d_input.py  csv_read.py  finite_difference_mesh.py  generate_simple2d_voltages.m  gitlab.md  graph_conjugate_gradient.py  lagrange.py  m19_bh.csv  matrix.py  matrix_generator.py  pyproject.toml  settings.py  symbolic_wkspce.m  test_matrix  utilize_simple2d_output.py
_dev/: Cholesky_Timing.xlsx  circuit_test.py  circuit_tester.py  csv_test.py  debug_matrix_generator.py  gaussian_elimination.py  generate_matrices.py  log_LRN_matrices.py  matrix_irrelevant.py  matrix_tester.py  picky_determinant_test.py  positive_definite_test.py  profile_cholesky_factorizaton.py  profile_cholesky_on_LRN_matrices.py  profile_finite_difference_mesh.py  profile_optimized_mesh.py  read_generated_matrices.py  run_conductor_simulation.py  test_conductor_simulation.py  test_conductor_simulation_scaling.py  test_finite_difference_mesh.py  test_generation.py
circuits/: circuits.xlsx
matrices/: det_tester.m  octave-workspace
question_scripts/: q1a.py
question_scripts/outputs/: q1a output analysis.xlsx  q1a.csv
