[tool.poetry]
name = "brilliant-euphonium"
version = "0.1.0"
description = ""
authors = ["FSharp4 <33583307+FSharp4@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "brilliant_euphonium"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
