[tool.poetry]
name = "numerical_methods"
version = "0.1.0"
description = ""
authors = ["jake612@duck.com"]
readme = "README.md"
packages = [{include = "numerical_methods"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
